--- a/RefsUpdates.bib
+++ b/RefsUpdates.bib
@@ -60,7 +60,7 @@ DOI = {10.5194/acp-10-341-2010}
 @Article{Sofiev-2015,
 AUTHOR = {Sofiev, M. and Berger, U. and Prank, M. and Vira, J. and Arteta, J. and Belmonte, J. and Bergmann, K.-C. and Ch\'eroux, F. and Elbern, H. and Friese, E. and Galan, C. and Gehrig, R. and Khvorostyanov, D. and Kranenburg, R. and Kumar, U. and Mar\'ecal, V. and Meleux, F. and Menut, L. and Pessi, A.-M. and Robertson, L. and Ritenberga, O. and Rodinkova, V. and Saarto, A. and Segers, A. and Severova, E. and Sauliene, I. and Siljamo, P. and Steensen, B. M. and Teinemaa, E. and Thibaudon, M. and Peuch, V.-H.},
 TITLE = {MACC regional multi-model ensemble simulations of birch pollen dispersion in Europe},
-JOURNAL = {Atmospheric Chemistry and Physics},
+JOURNAL = acp,
 VOLUME = {15},
 YEAR = {2015},
 NUMBER = {14},
@@ -73,7 +73,7 @@ DOI = {10.5194/acp-15-8115-2015}
 AUTHOR = {Sofiev, M. and Ritenberga, O. and Albertini, R. and Arteta, J. and Belmonte, J. and Bernstein, C. G. and Bonini, M. and Celenk, S. and Damialis, A. and Douros, J. and Elbern, H. and Friese, E. and Galan, C. and Oliver, G. and Hrga, I. and Kouznetsov, R. and Krajsek, K. and Magyar, D. and Parmentier, J. and Plu, M. and Prank, M. and Robertson, L. and Steensen, B. M. and Thibaudon, M. and Segers, A. and Stepanovich, B. and Valdebenito, A. M. and Vira, J. and Vokou, D.},
 TITLE = {Multi-model ensemble simulations of olive pollen distribution in Europe in
 2014: current status and outlook},
-JOURNAL = {Atmospheric Chemistry and Physics},
+JOURNAL = acp,
 VOLUME = {17},
 YEAR = {2017},
 NUMBER = {20},
