--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -504,48 +504,45 @@ Figure \ref{fig:O3_boxplot} shows the calculated trends (i.e. Sen's slopes) for 
 
 For both the observed and modelled data the trends show an increase in the 10th percentile and a gradually stronger decrease in the higher percentiles. This is as expected when the emission of precursors (NOx) is reduced with time. The increase in the 10th percentile is explained by reduced titration by NOx (mainly seen in winter) while the the decreasing trend in the highest percentiles is explained by reduced photochemical formation of ozone. The net result of these trends is a narrowing of the distribution of O$_3$ concentrations. 
 
-Figure \ref{fig:O3_boxplot} indicates that the model overestimates the increase of the 10th percentile and overestimates the decrease of the 99 percentile for stations south of 49 \degrees N. As explained above, the relative trend values shown in Figure \ref{fig:O3_boxplot} are based on the calculated Sen's slopes and use the value of these trend lines the first year (i.e. 2000) as the reference year. 
+Figure \ref{fig:O3_boxplot} indicates that the model overestimates the decrease of the 99 percentile for stations south of 49 \degrees N and overestimates the increase in the 10th percentile in both regions. As explained above, the relative trend values shown in Figure \ref{fig:O3_boxplot} are based on the Sen's slopes and use the value of these trend lines the first year (i.e. 2000) as the reference for modelled and observed data separately. The results given in Figure \ref{fig:O3_boxplot} thus show the estimated relative changes without any reference to the absolute levels of the modelled and observed data. 
 
-The annual O$_3$ percentile values for the observed and modelled data during 2000-2019 are shown in Figures \ref{fig:O3_perctrends_N} and \ref{fig:O3_perctrends_S} for stations north and south of 49 \degrees N. The solid lines mark the mean of all stations while the shaded areas mark the 25th and 75th percentile of these station-based values. 
+The annual O$_3$ percentile values for the observed and modelled data during 2000-2019 are shown in Figures \ref{fig:O3_perctrends_N} and \ref{fig:O3_perctrends_S} for stations north and south of 49 \degrees N. The solid lines mark the mean of all stations while the shaded areas mark the 25th and 75th percentile of these station-based values. These results show that the modelled 10th and 50th percentiles are higher than observed whereas the observed high percentiles (95-99) are higher than modelled. The bias in the high percentiles are particularly strong for stations south of 49 \degrees N. For the 75th percentile, the absolute levels of the modelled and observed data agree very well. It is furthermore seen that the interannual variation in the higher percentiles, i.e. the change in levels from year to year, is very well reproduced by the model but with a substantial offset. 
 
-
-
-
-\begin{figure}[!h]
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/O3_boxpl.png}
 	\caption{\label{fig:O3_boxplot}Boxplot of trends in annual percentiles of daily max O$_3$ from 2000-2019 for EMEP observations and model calculations for stations north (left) and south (right) of 49 \degrees N. The boxes mark the 25 and the 75 percentiles with the median given as a thin line inside. The upper whisker extends from the hinge to the highest value that is within 1.5*IQR of the hinge, where IQR is the inter-quartile range, or distance between the first and third quartiles. The lower whisker extends from the hinge to the lowest value within 1.5*IQR of the hinge. Data beyond the end of the whiskers are outliers and plotted as points. The mean values are shown as black circles. Both significant and non-significant trend values were included. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
-
-
-
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/alltrends_north_49_2000_2019_1200m.png}
 	\caption{\label{fig:O3_perctrends_N}Trends in annual percentiles of daily max O$_3$ from 2000-2019 for EMEP observations and model for sites north of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/alltrends_south_49_2000_2019_1200m.png}
 	\caption{\label{fig:O3_perctrends_S}Trends in annual percentiles of daily max O$_3$ from 2000-2019 for EMEP observations and model for sites south of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
 
-\begin{figure}
+Figures \ref{fig:O3_aot40croptrends} - \ref{fig:O3_somo35trends} show the station-wise spread in observed and modelled data 2000-2019 for the 3-months AOT40 for crops, 6-months AOT40 for forests and the SOMO35 for stations north and south of 40 \degrees N, respectively. For SOMO35, the model agrees very well with the observations both with respect to absolute levels and with respect to trends although an underestimation is seen in extreme year 2003. For the AOT40 values, the model overestimates the levels for both the 3-months and 6-months AOT40s, and the bias is particularly strong for the southern sites. As mentioned above, model predictions of AOT40 levels are particularly challenging since the background O$_3$ concentrations used at the model boundaries become very important.
+
+
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/EUAOT40_Crops_2000_2019_1200m.png}
 	\caption{\label{fig:O3_aot40croptrends} Trends in 3-months AOT40 (May-July) O$_3$ for crops from 2000-2019 for EMEP observations and model for sites north (left) and south (right) of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/EUAOT40_Forests_2000_2019_1200m.png}
 	\caption{\label{fig:O3_aot40foresttrends}Trends in 6-months AOT40 (Apr-Sep) O$_3$ for forests from 2000-2019 for EMEP observations and model for sites north (left) and south (right) of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/SOMO35_2000_2019_1200m.png}
 	\caption{\label{fig:O3_somo35trends}Trends in SOMO35 from 2000-2019 for EMEP observations and model for sites north (left) and south (right) of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
