--- a/report.tex
+++ b/report.tex
@@ -388,6 +388,7 @@
 
 \include{chapterAPPX_EMIS_2019}
 \include{chapterAPPX_EMIS_trends}
+\include{chapterAPPX_trends}
 \include{chapterAPPX_SR_2019}
 \include{chapterAPPX_CountryRep}
 \include{chapterAPPX_ModelEval}
