--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -98,7 +98,7 @@ EMEP reported data for the European region, then the emissions of both POA and E
 
 
 \section{\label{OBSTrends}{Observations}}
-The observations used are all reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}. The time series have been selected based on statistical criteria as described in the next chapter  \ref{sec:Method} and based on the site location. Sites which are situated higher than around 2000 masl have been excluded (except DE0003 at 2007 masl is included)in addition to NO0042G since these are often above the bpundarty layer and difficult for the model to visuel inspection of,
+The observations used are all reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}. The time series have been selected based on statistical criteria as described in the next chapter  \ref{sec:Method} and based on the site location. Sites which are situated higher than around 2000 masl have been excluded (except DE0003 at 2007 masl is included)in addition to NO0042G since these are often above the boundarty layer and difficult for the model to visuel inspection of,
 
 \section{\label{Method}{Method for calculation of trends}}
 Both observed and modelled trends were processed with the pyaerocom software (\url{https://github.com/metno/pyaerocom}, version XXX) for the following periods: 2000-2019, 2005-2019, 2000-2010, and 2010-2019. All observations were provided via the EBAS database. 
