--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -961,9 +961,10 @@ OC/\pmfine.
 \includegraphics[width=16cm]{FIGS_TRENDS/Composition_4sites.png}
  \caption{
   Mass balance of \pmfine at Ispra (IT04), Birkenes (NO02), Diabla Gora
-  (PL05) and Iskrba (SI08) including OM, EC, \ce{SO4^2-}, \ce{NO3^-}, \ce{NH4^+} from observations (lef) and apportionment of eBC
-  into biomass burning/solid fuel (eBCbb) and fossil fuel/liquid fuel
-  (eBCff) for winter 2017/2018 (right panel). \label{fig:KEX4}
+  (PL05) and Iskrba (SI08) including OM, EC, \ce{SO4^2-}, \ce{NO3^-}, \ce{NH4^+} from 
+  observations (left), modeled (middle) and apportionment of eBC
+  into biomass burning/solid fuel (\ebcbb) and fossil fuel/liquid fuel
+  (\ebcbb) for winter 2017/2018 (right). \label{fig:KEX4}
  }
 \end{figure}
 
