--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -964,7 +964,7 @@ OC/\pmfine.
   (PL05) and Iskrba (SI08) including OM, EC, \ce{SO4^2-}, \ce{NO3^-}, \ce{NH4^+} from 
   observations (left), modeled (middle) and apportionment of eBC
   into biomass burning/solid fuel (\ebcbb) and fossil fuel/liquid fuel
-  (\ebcbb) for winter 2017/2018 (right). Note that at NO02 and PLo5 the SIA componets are from filterpack samp \label{fig:KEX4}
+  (\ebcbb) for winter 2017/2018 (right). Note that at NO02 and PLo5 the SIA componets are from  \label{fig:KEX4}
  }
 \end{figure}
 
